# birpm

./: .pylintrc  README.md  pyproject.toml
.github/workflows/: tests.yml
birpm/: __main__.py
birpm/config/: __init__.py
birpm/console/: __init__.py
tests/config/: test_config.py
