[tool.poetry]
name = "birpm"
version = "0.0.0"
description = ""
authors = ["Moonsik Park <moonsik.park@estsoft.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[tool.poetry-dynamic-versioning]
enable = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
